@@ -1,8 +1,10 @@
 man_MANS = \
+	evtxexport.1 \
 	evtxinfo.1 \
 	libevtx.3
 
 EXTRA_DIST = \
+	evtxexport.1 \
 	evtxinfo.1 \
 	libevtx.3
 
