@@ -1,5 +1,5 @@
 TODO
-* create evtxexport.1 man page
+* evtxexport: add add support for .mui files in the same directory
 * add clean IO handle function
 * msvscpp:
   - check and fix debug output generation
@@ -74,6 +74,9 @@ Debug:
 
 Recovery:
 * scan for records in chunk free space
+
+20140210
+* added evtxexport man page
 
 20140131
 * removed examples
